[package]
name = "socks5d"
version = "0.6.0"
edition = "2024"
description = "A SOCKS5 proxy server written in Rust"
keywords = ["socks5", "proxy", "server", "rust"]
license = "MIT"
repository = "https://github.com/fb0sh/socks5d"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
    "signal"
] }

clap = { version="4", features=["derive", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

[profile.release]
opt-level = "z"        # 最小体积
lto = true             # 链接优化
codegen-units = 1      # 单编译单元
panic = "abort"        # 去 unwind runtime
strip = true           # 去符号表（Rust 1.70+）